--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
     --uib-color: white;
 
     flex: 1 1 auto;
-    position: relative; 
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -37,6 +37,7 @@
 }
 
 @keyframes pulse {
+
     0%,
     100% {
         transform: scale(0);
@@ -58,8 +59,10 @@ body {
 }
 
 .loader {
-    display: grid;
-    place-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .instagram-embed {
@@ -144,7 +147,7 @@ p {
     padding: 15px;
     background-color: rgb(122, 98, 72);
     flex: 1 1 auto;
-    width:auto;
+    width: auto;
     border-radius: 50px;
     margin: 10px 15px;
 }
